<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <!-- Logo of the app -->
    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="389dp"
        android:layout_height="172dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/nmims_horizontal_logo" />

    <!-- Textbox for about app -->
    <TextView
        android:id="@+id/textView_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:contextClickable="false"
        android:fontFamily="sans-serif-condensed-light"
        android:padding="16dp"
        android:text="@string/about_app"
        android:textAlignment="viewStart"
        android:textColor="#0B0B0B"
        android:textSize="18sp"
        android:textStyle="normal" />

    <!-- Red line separator -->
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#FF0000"
        android:layout_marginTop="256dp"/>

    <!-- Version of App -->
    <TextView
        android:id="@+id/textView_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/version"
        android:padding="16dp"
        android:textSize="16sp"/>

</LinearLayout>
